--- a/dash4.html
+++ b/dash4.html
@@ -19,7 +19,7 @@
         <link rel="stylesheet" href="css/jquerymobile.nativedroid.light.css"  id='jQMnDTheme' />
 
 		<!-- nativeDroid: Color Schemes -->
-        <link rel="stylesheet" href="css/jquerymobile.nativedroid.color.green.css" id='jQMnDColor' />
+        <link rel="stylesheet" href="css/jquerymobile.nativedroid.color.ew.css" id='jQMnDColor' />
 
 		<!-- jQuery / jQueryMobile Scripts -->
 		<!-- <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script> -->
@@ -46,8 +46,9 @@
 	<div data-role="page" data-theme='b'>
 		<!-- panel menu -->
 		<div data-role="panel" data-display="push" id="mypanel" data-theme="b">
-        <ul data-role="listview">
-            <li>Your wishes</li>
+        <img class='logo' src="css/images/ew.png">
+		<ul data-role="listview">
+            
             <li data-icon='false'><a href="#"><i class='lIcon fa fa-coffee'></i>Info</a></li>
             <li data-icon='false'><a href="#"><i class='lIcon fa fa-beer'></i>Log Off</a></li>
         </ul>
