--- a/dash4.html
+++ b/dash4.html
@@ -97,7 +97,7 @@
 					<!-- Fourth Card -->
 					<li data-cards-type='sports'>
 						<div>
-							Platforms
+							Articles
 							<a href="#table-column-toggle-popup" class="ui-table-columntoggle-btn ui-btn ui-btn ui-shadow ui-mini">CSV</a>
 						</div>
 						<div class="visualization_wrap">
