--- a/dash4.html
+++ b/dash4.html
@@ -57,7 +57,7 @@
 
 		<!-- page header -->
 		<div data-role="header" data-position="fixed" data-tap-toggle="false" data-theme='b'>
-			<a href="http://127.0.0.1:8080/logout" data-role='button' rel="external", data-ajax="false" data-inline='true'><i class='lIcon fa fa-sign-out'></i></a>
+			<a href="http://127.0.0.1:8080/logout" data-role='button' rel="external" data-ajax="false" data-inline='true'><i class='lIcon fa fa-sign-out'></i></a>
 
 			 <img class='delta' src="css/images/delta.png">
    
@@ -71,7 +71,7 @@
 					<li data-cards-type='weather'>
 						<div>
 							Raw Downloads
-							<a href="http://127.0.0.1:8080/content/EW" id="raw_downloads" class="ui-table-columntoggle-btn ui-btn ui-btn ui-shadow ui-mini">CSV&nbsp<i class='lIcon fa fa-cloud-download'></i></a> 
+							<a href="http://127.0.0.1:8080/content/EW" id="raw_downloads" rel="external" data-ajax="false" class="ui-table-columntoggle-btn ui-btn ui-btn ui-shadow ui-mini">CSV&nbsp<i class='lIcon fa fa-cloud-download'></i></a> 
 						</div>
 						<div class="visualization_wrap">
 							<div id="chart_downloads" class='visualization'></div>
@@ -81,7 +81,7 @@
 					<li data-cards-type='publictransport'>
 						<div>
 							Total Downloads
-							<a href="http://127.0.0.1:8080/content/EW" id="raw_downloads" class="ui-table-columntoggle-btn ui-btn ui-btn ui-shadow ui-mini">CSV&nbsp<i class='lIcon fa fa-cloud-download'></i></a>
+							<a href="http://127.0.0.1:8080/content/EW" id="raw_downloads" rel="external" data-ajax="false" class="ui-table-columntoggle-btn ui-btn ui-btn ui-shadow ui-mini">CSV&nbsp<i class='lIcon fa fa-cloud-download'></i></a>
 						</div>
 						<div class="visualization_wrap">
 							<div id="chart_div2" class='visualization'></div>
@@ -91,7 +91,7 @@
 					<li data-cards-type='sports'>
 						<div>
 							Sessions
-							<a href="http://127.0.0.1:8080/content/sessions" id="sessions" class="ui-table-columntoggle-btn ui-btn ui-btn ui-shadow ui-mini">CSV&nbsp<i class='lIcon fa fa-cloud-download'></i></a>
+							<a href="http://127.0.0.1:8080/content/sessions" id="sessions" rel="external" data-ajax="false" class="ui-table-columntoggle-btn ui-btn ui-btn ui-shadow ui-mini">CSV&nbsp<i class='lIcon fa fa-cloud-download'></i></a>
 						</div>
 						<div class="visualization_wrap">
 							<div id="chart_div3" class='visualization'></div>
@@ -102,7 +102,7 @@
 					<li data-cards-type='text'>
 						<div>
 							Articles
-							<a href="http://127.0.0.1:8080/content/articles" class="ui-table-columntoggle-btn ui-btn ui-btn ui-shadow ui-mini">CSV&nbsp<i class='lIcon fa fa-cloud-download'></i></a>
+							<a href="http://127.0.0.1:8080/content/views" id="views" rel="external" data-ajax="false" class="ui-table-columntoggle-btn ui-btn ui-btn ui-shadow ui-mini">CSV&nbsp<i class='lIcon fa fa-cloud-download'></i></a>
 						</div>
 						<div class="visualization_wrap">
 							<div id="chart_div4" class='visualization'></div>
